@@ -48,12 +48,15 @@ function _subscriptions_mail_cron() {
       break;  // No more ready queue items, terminate loop.
     }
 
-    $saved_user = $user;
+    $saved_user     = $user;
     $saved_language = $language;
     drupal_save_session(FALSE);
-    $user = user_load($queue_item['uid']);
+    $user      = user_load($queue_item['uid']);
     $lang_code = $language->language;
-    $digest_data = array('subs' => array('type' => 'digest'));
+    // Clear the term cache to avoid getting a different user's set of terms.
+    entity_load('taxonomy_term', array(), array(), TRUE);
+
+    $digest_data                      = array('subs' => array('type' => 'digest'));
     $watchdog_variables['%user_name'] = $user->name;
 
     do {  // once and repeat while adding to a digest
@@ -72,7 +75,7 @@ function _subscriptions_mail_cron() {
         $queue_item['mail'] = $user->mail;
         /** @var $load_function string */
         $load_function = $queue_item['load_function'];
-        $load_args = $queue_item['load_args'];
+        $load_args     = $queue_item['load_args'];
         if (!isset($loaded_objects[$user->uid][$load_function][$load_args]) && $load_function($queue_item)) {
           $object = $queue_item['object'];
           $access = module_invoke_all('subscriptions', 'access', $load_function, $load_args, $object);
@@ -93,16 +96,16 @@ function _subscriptions_mail_cron() {
           }
         }
         else {
-          $object = $loaded_objects[$user->uid][$load_function][$load_args];
-          $module = $queue_item['module'];
+          $object    = $loaded_objects[$user->uid][$load_function][$load_args];
+          $module    = $queue_item['module'];
           $ori_field = $field = $queue_item['field'];
           $ori_value = $value = $queue_item['value'];
           if (!isset($fields[$lang_code][$module])) {
             $fields[$lang_code][$module] = module_invoke_all('subscriptions', 'fields', $module);
           }
           $data_function = $fields[$lang_code][$module][$field]['data_function'];
-          $mailmod = (empty($fields[$lang_code][$module][$field]['mail_module']) ? 'subscriptions_mail' : $fields[$lang_code][$module][$field]['mail_module']);
-          $mailkey = $fields[$lang_code][$module][$field]['mailkey'];
+          $mailmod       = (empty($fields[$lang_code][$module][$field]['mail_module']) ? 'subscriptions_mail' : $fields[$lang_code][$module][$field]['mail_module']);
+          $mailkey       = $fields[$lang_code][$module][$field]['mailkey'];
           if ($mailkey_altered = module_invoke_all('subscriptions', 'mailkey_alter', $mailkey, $object, $queue_item)) {
             $mailkey = $mailkey_altered[0];
           }
@@ -121,7 +124,7 @@ function _subscriptions_mail_cron() {
           //mail_edit_format($values['subscriptions_comment_body'], $data + array('comment' => $comment), array('language' => $language));
 
           if ($digest) {
-            $digest_data = subscriptions_mail_digest_add_item($digest_data, $mailmod, $mailkey, $data, $user);
+            $digest_data                                                         = subscriptions_mail_digest_add_item($digest_data, $mailmod, $mailkey, $data, $user);
             $digest_data['subs']['send_intervals'][$queue_item['send_interval']] = $queue_item['send_interval'];
           }
           else {
@@ -145,16 +148,19 @@ function _subscriptions_mail_cron() {
           (_subscriptions_mail_send($mailmod, SUBSCRIPTIONS_DIGEST_MAILKEY, $digest_data['subs']['name'], $digest_data['subs']['mail'], $from, $digest_data['subs']['uid'], $digest_data['subs']['send_intervals'], $digest_data)
             ? ++$digest_count
             : ++$digest_failed);
-          $digest = FALSE;
+          $digest      = FALSE;
           $digest_data = array('subs' => array('type' => 'digest'));
         }
       }
     } while (!empty($digest));
 
-    $user = $saved_user;
+    $user     = $saved_user;
     $language = $saved_language;
     drupal_save_session(TRUE);
   }
+
+  // Clear the term cache again for the next cron client.
+  entity_load('taxonomy_term', array(), array(), TRUE);
 
   if ($single_count + $digest_count + $single_failed + $digest_failed > 0) {
     $current_seconds = timer_read('page')/1000;
@@ -365,6 +371,12 @@ function _subscriptions_mail_mail_alter(array &$message) {
       $msg = $matches['before'] . $site_url . $matches['after'];
     }
     $message['body'][0] = $msg;
+  }
+  
+  if (variable_get('subscriptions_showmailkeys', 0)) {
+    $prefix = substr($message['body'][0], 0, 2);
+    $prefix = ( $prefix[1] == ' ' ? $prefix : '' );
+    $message['body'][0] = $message['body'][0] . $prefix . $message['id'] . "\n";
   }
 
   /* Comment this line for debugging...
